@@ -177,10 +177,16 @@ public:
         return true;
     }
 
+    virtual bool SetHelpLabel(const ButtonLabel& help)
+    {
+        DoSetCustomLabel(m_help, help);
+        return true;
+    }
+
     // test if any custom labels were set
     bool HasCustomLabels() const
     {
-        return !(m_ok.empty() && m_cancel.empty() &&
+        return !(m_ok.empty() && m_cancel.empty() && m_help.empty() &&
                  m_yes.empty() && m_no.empty());
     }
 
@@ -195,6 +201,8 @@ public:
         { return m_ok.empty() ? GetDefaultOKLabel() : m_ok; }
     wxString GetCancelLabel() const
         { return m_cancel.empty() ? GetDefaultCancelLabel() : m_cancel; }
+    wxString GetHelpLabel() const
+        { return m_help.empty() ? GetDefaultHelpLabel() : m_help; }
 
     // based on message dialog style, returns exactly one of: wxICON_NONE,
     // wxICON_ERROR, wxICON_WARNING, wxICON_QUESTION, wxICON_INFORMATION
@@ -250,6 +258,7 @@ protected:
     const wxString& GetCustomYesLabel() const { return m_yes; }
     const wxString& GetCustomNoLabel() const { return m_no; }
     const wxString& GetCustomOKLabel() const { return m_ok; }
+    const wxString& GetCustomHelpLabel() const { return m_help; }
     const wxString& GetCustomCancelLabel() const { return m_cancel; }
 
 private:
@@ -259,13 +268,15 @@ private:
     virtual wxString GetDefaultNoLabel() const { return wxGetTranslation("No"); }
     virtual wxString GetDefaultOKLabel() const { return wxGetTranslation("OK"); }
     virtual wxString GetDefaultCancelLabel() const { return wxGetTranslation("Cancel"); }
+    virtual wxString GetDefaultHelpLabel() const { return wxGetTranslation("Help"); }
 
     // labels for the buttons, initially empty meaning that the defaults should
     // be used, use GetYes/No/OK/CancelLabel() to access them
     wxString m_yes,
              m_no,
              m_ok,
-             m_cancel;
+             m_cancel,
+             m_help;
 
     wxDECLARE_NO_COPY_CLASS(wxMessageDialogBase);
 };
